--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="TemplateMo">
 
-        <title>First Portfolio Bootstrap 5 Theme</title>
+        <title>Manohar portfolio</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,12 +77,13 @@ https://templatemo.com/tm-578-first-portfolio
                         </li>
                     </ul>
 
-                    <!-- <div class="d-lg-flex align-items-center d-none ms-auto">
-                        <i class="navbar-icon bi-telephone-plus me-3"></i>
+                    <div class="d-lg-flex align-items-center d-none ms-auto">
+                        <!-- <i class="navbar-icon bi-telephone-plus me-3"></i>
                         <a class="custom-btn btn" href="#section_5">
                             7207378703
-                        </a>
-                    </div> -->
+                        </a> -->
+                        <p class="mb-4"><a class="custom-btn btn custom-link" href="images/resume.pdf" download="resume.pdf"">My Resume</a></p>
+                    </div>
                 </div>
 
             </div>
